--- a/package.json
+++ b/package.json
@@ -27,5 +27,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nvashish123/amplify-notes-initial.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nvashish123/amplify-notes-initial/issues"
+  },
+  "homepage": "https://github.com/nvashish123/amplify-notes-initial#readme"
 }
